# anymind_stellar

./: .gitignore  Cargo.toml  README.md  SOLANA_TO_STELLAR_AUDIT.md  env.example  index.html  migration.md  package.json  vite.config.ts  wallet.md
.claude/: info.txt  settings.local.json
anymind-sdk/: README.md  sdk.py
anymind-sdk/anymind/: agent.py
backend/: env.example  main.py  render.yaml  requirements.txt
backend/app/: __init__.py
backend/app/api/v1/: capsules.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: capsule_service.py  llm_service.py  memory_service.py  wallet_service.py  x402_service.py
backend/supabase/: config.toml
bindings/: README.md
bindings/src/: index.ts
contracts/: Cargo.toml  README.md
contracts/all-contracts/: Anchor.toml  Cargo.toml  DEPLOY.md  deploy.ps1  lib.rs
contracts/solmind-staking/: Anchor.toml
contracts/solmind-staking/programs/solmind-staking/: Cargo.toml
contracts/solmind-staking/programs/solmind-staking/src/: lib.rs
contracts/solmind-staking/tests/: solmind-staking.ts
contracts/src/: lib.rs
src/: App.tsx
src/components/: Navbar.tsx
src/contexts/: StellarWalletContext.tsx  WalletContextProvider.tsx
src/hooks/: useCapsuleQuery.ts  useContract.ts  useStellarBalance.ts
src/lib/: api.ts  contract.ts
src/pages/: CapsuleDetail.tsx  DevelopersPage.tsx  EarningsDashboard.tsx  LandingPage.tsx  MainApp.tsx  Marketplace.tsx  MemoryCapsuleView.tsx  Settings.tsx  Staking.tsx  WalletBalance.tsx
src/utils/: stellarPayment.ts  storage.ts
