[package]
name = "anymind"
version = "0.1.0"
description = "Anymind - Stateful AI runtime with persistent memory on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anymind"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

